Basic table structure

--- a/less/site.less
+++ b/less/site.less
@@ -1,5 +1,18 @@
 @import "../resources/public/vendor/bootstrap/less/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Lora');
 
-body {
-    color:red;
+.im-grid {
+    font-family: 'Lora', serif;
+    font-size: 12px;
+
+    .im-grid-body {
+        .im-grid-row {
+            .im-grid-cell {
+                padding: 4px;
+                border-top: 1px solid white;
+                border-right: 1px solid white;
+                background-color: #f6f1f1;
+            }
+        }
+    }
 }
